--- a/views/round-robin.ejs
+++ b/views/round-robin.ejs
@@ -7,11 +7,16 @@
     <div class="container">
 
 
-
         <form action="/round-robin" method="POST" id="myForm">
-            Enter Quantum<input type="number" name="quantum" id="quantum" placeholder="Quantum" required="required">
             <table class="table table-striped table-dark" id="myTable">
                 <thead>
+                    <tr>
+                        <td scope="col">Enter Quantum:<input type="number" name="quantum" id="quantum"
+                                placeholder="Quantum" required="required" style="margin-left: 20px; width: 90px;"></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
                     <tr>
                         <th scope="col">Process ID</th>
                         <th scope="col">Arrival Time</th>
@@ -21,7 +26,8 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td> <input type="number" name="pId" id="pId" required="required"></td>
+                        <td> <input type="number" min="1" max="20" name="pId" id="pId" required="required"
+                                style="width: 200px;"></td>
                         <td> <input type="number" name="at" id="at" required="required"></td>
                         <td> <input type="number" name="bt" id="bt" required="required"></td>
                         <td><button onclick="deleteRow(this)">Delete</button></td>
@@ -44,7 +50,7 @@
             var form = document.getElementById("myForm");
             form.addEventListener("submit", function (event) {
                 var table = document.getElementById("myTable");
-                if (table.rows.length <= 2) {
+                if (table.rows.length <= 3) {
                     alert("You must enter at least two processes to calculate.");
                     event.preventDefault(); // prevent form submission
                 }
@@ -79,10 +85,4 @@
         </script>
 
     </div>
-
-    <!-- <div>
-        <video autoplay muted loop id="myVideo">
-            <source src="imgs/background.mp4" type="video/mp4">
-        </video>
-    </div> -->
     <%- include('./includes/end.ejs') %>
