--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -35,7 +35,7 @@
                             aria-expanded="false">Projects</a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="/round-robin">Round Robin</a></li>
-                            <li><a class="dropdown-item" href="/dead-lock">Deadlock</a></li>
+                            <li><a class="dropdown-item" href="/banker's-algo">Banker's Algorithm</a></li>
                             <li><a class="dropdown-item" href="/scan-cScan">SCAN CSCAN</a></li>
                             <li><a class="dropdown-item" href="/MRU">MRU Page Replacement Algorithm</a></li>
                         </ul>
