--- a/views/round-robin.ejs
+++ b/views/round-robin.ejs
@@ -11,8 +11,7 @@
             <table class="table table-striped table-dark" id="myTable">
                 <thead>
                     <tr>
-                        <td scope="col">Enter Quantum:<input type="number" name="quantum" id="quantum"
-                                placeholder="Quantum" required="required" style="margin-left: 20px; width: 90px;"></td>
+                        <td scope="col">Enter Quantum:<input type="number" name="quantum" id="quantum" placeholder="Quantum" required="required" class="smallCell"></td>
                         <td></td>
                         <td></td>
                         <td></td>
