--- a/views/round-robin.ejs
+++ b/views/round-robin.ejs
@@ -1,88 +1,109 @@
 <%- include('./includes/head.ejs') %>
 
-    <div class="center">
-        <h1 class="headings">ROUND ROBIN</h1>
+<div class="center">
+  <h1 class="headings">ROUND ROBIN</h1>
+</div>
+
+<div class="container" style="text-align: center">
+  <form action="/round-robin" method="POST" id="myForm">
+    <table class="table table-striped table-dark">
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td scope="col">
+          Enter Quantum:<input
+            type="number"
+            name="quantum"
+            id="quantum"
+            required="required"
+            class="smallCell"
+          />
+        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </table>
+    <table class="table table-striped table-dark" id="myTable">
+      <thead>
+        <tr>
+          <th scope="col" style="width: 20rem">Process ID</th>
+          <th scope="col" style="width: 20rem">Arrival Time</th>
+          <th scope="col" style="width: 20rem">Burst Time</th>
+          <th scope="col" style="width: 20rem">Delete Row</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            <input
+              type="number"
+              min="1"
+              max="20"
+              name="pId"
+              id="pId"
+              required="required"
+              style="width: 200px"
+            />
+          </td>
+          <td><input type="number" name="at" id="at" required="required" /></td>
+          <td><input type="number" name="bt" id="bt" required="required" /></td>
+          <td>
+            <button onclick="deleteRow(this)" class="delete-button">
+              Delete
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+    <div style="display: inline; margin: 20px 30px">
+      <button type="button" class="b1" type="button" onclick="addRow()">
+        Add Row
+      </button>
     </div>
 
-    <div class="container">
-
-
-        <form action="/round-robin" method="POST" id="myForm">
-            <table class="table table-striped table-dark" id="myTable">
-                <thead>
-                    <tr>
-                        <td scope="col">Enter Quantum:<input type="number" name="quantum" id="quantum" placeholder="Quantum" required="required" class="smallCell"></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th scope="col">Process ID</th>
-                        <th scope="col">Arrival Time</th>
-                        <th scope="col">Burst Time</th>
-                        <th scope="col">Delete Row</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td> <input type="number" min="1" max="20" name="pId" id="pId" required="required"
-                                style="width: 200px;"></td>
-                        <td> <input type="number" name="at" id="at" required="required"></td>
-                        <td> <input type="number" name="bt" id="bt" required="required"></td>
-                        <td><button onclick="deleteRow(this)" class="b1">Delete</button></td>
-                    </tr>
-                </tbody>
-            </table>
-
-            <div class="center">
-                <button type="submit" class="b1">Calculate</button>
-            </div>
-        </form>
-
-        <div class="center">
-            <button class="b1" type="button" onclick="addRow()"> Add Row </button>
-        </div>
-
-        <script>
-
-            // the logic for when if there is only one row you cannot submit the form.
-            var form = document.getElementById("myForm");
-            form.addEventListener("submit", function (event) {
-                var table = document.getElementById("myTable");
-                if (table.rows.length <= 3) {
-                    alert("You must enter at least two processes to calculate.");
-                    event.preventDefault(); // prevent form submission
-                }
-            });
-
-
-
-
-            // the logic for adding a row and the logic for delete row button
-            function addRow() {
-                var table = document.getElementById("myTable");
-                var newRow = table.insertRow(-1); // Add row at the end
-                var pIdCell = newRow.insertCell(0);
-                var atCell = newRow.insertCell(1);
-                var btCell = newRow.insertCell(2);
-                var buttonCell = newRow.insertCell(3);
-                pIdCell.innerHTML = '<input type="text" name="pId" value="">';
-                atCell.innerHTML = '<input type="text" name="at" value="">';
-                btCell.innerHTML = '<input type="text" name="bt" value="">';
-                var deleteButton = document.createElement("button");
-                deleteButton.classList.add("b1");
-                deleteButton.innerHTML = "Delete";
-                deleteButton.onclick = function () {
-                    deleteRow(this);
-                };
-                buttonCell.appendChild(deleteButton);
-            }
-
-            function deleteRow(btn) {
-                var row = btn.parentNode.parentNode;
-                row.parentNode.removeChild(row);
-            }
-        </script>
-
+    <div style="display: inline; margin: 20px 30px;">
+      <button type="submit" class="b1">Calculate</button>
     </div>
-    <%- include('./includes/end.ejs') %>
+  </form>
+
+  <script>
+    // the logic for when if there is only one row you cannot submit the form.
+    var form = document.getElementById("myForm");
+    form.addEventListener("submit", function (event) {
+      var table = document.getElementById("myTable");
+      if (table.rows.length <= 2) {
+        alert("You must enter at least two processes to calculate.");
+        event.preventDefault(); // prevent form submission
+      }
+    });
+
+    // the logic for adding a row and the logic for delete row button
+    function addRow() {
+      var table = document.getElementById("myTable");
+      var newRow = table.insertRow(-1); // Add row at the end
+      var pIdCell = newRow.insertCell(0);
+      var atCell = newRow.insertCell(1);
+      var btCell = newRow.insertCell(2);
+      var buttonCell = newRow.insertCell(3);
+      pIdCell.innerHTML = '<input type="text" name="pId" value="" required="required">';
+      atCell.innerHTML = '<input type="text" name="at" value="" required="required">';
+      btCell.innerHTML = '<input type="text" name="bt" value="" required="required">';
+      var deleteButton = document.createElement("button");
+      deleteButton.classList.add("delete-button");
+      deleteButton.innerHTML = "Delete";
+      deleteButton.onclick = function () {
+        deleteRow(this);
+      };
+      buttonCell.appendChild(deleteButton);
+    }
+
+    function deleteRow(btn) {
+      var row = btn.parentNode.parentNode;
+      row.parentNode.removeChild(row);
+    }
+  </script>
+</div>
+<%- include('./includes/end.ejs') %>
