--- a/views/home.ejs
+++ b/views/home.ejs
@@ -61,8 +61,9 @@
                             <!-- <section class="d-flex justify-content-center">
                                 <img class="d-none d-lg-block" src="imgs/lolli_icon.png" alt="icon">
                             </section> -->
-                            <p class="lead para">The Round Robin Scheduling Algorithm is the preemptive version of the
+                            <p class="lead-para">The Round Robin Scheduling Algorithm is the preemptive version of the
                                 First Come First Serve Scheduling Algorithm (FCFS). </p>
+                            <a class="simulator"href="/round-robin">Simulator</a>
                         </div>
                     </div>
                 </div>
@@ -80,8 +81,9 @@
                             <!-- <section class="d-flex justify-content-center">
                                 <img class="d-none d-lg-block" src="imgs/lolli_icon.png" alt="icon">
                             </section> -->
-                            <p class="lead para">The Banker's Algorithm is a resource allocation and deadlock avoidance
+                            <p class="lead-para">The Banker's Algorithm is a resource allocation and deadlock avoidance
                                 algorithm that assesses safety by doing a "S-State" check</p>
+                                <a class="simulator"href="/banker's-algo"">Simulator</a>
                         </div>
                     </div>
                 </div>
@@ -106,9 +108,10 @@
                             <!-- <section class="d-flex justify-content-center">
                                 <img class="d-none d-lg-block" src="imgs/lolli_icon.png" alt="icon">
                             </section> -->
-                            <p class="lead para">The SCAN Disk Scheduling Algorithm is often referred to as the Elevator
+                            <p class="lead-para">The SCAN Disk Scheduling Algorithm is often referred to as the Elevator
                                 algorithm. This allows the head or pointer to move in either direction
                                 </p>
+                                <a class="simulator"href="/scan-cScan">Simulator</a>
                         </div>
                     </div>
                 </div>
@@ -128,9 +131,10 @@
                             <!-- <section class="d-flex justify-content-center">
                                 <img class="d-none d-lg-block" src="imgs/lolli_icon.png" alt="icon">
                             </section> -->
-                            <p class="lead para">The SCAN Disk Scheduling Algorithm is often referred to as the Elevator
+                            <p class="lead-para">The SCAN Disk Scheduling Algorithm is often referred to as the Elevator
                                 algorithm. This allows the head or pointer to move in either direction
                                 </p>
+                                <a class="simulator"href="/mru">Simulator</a>
                         </div>
                     </div>
                 </div>
