--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,7 +17,7 @@
 
         <link rel="stylesheet" href="../css/css_reset.css">
 
-        <title>Museum of Candy</title>
+        <title>OS Project Team 7</title>
     </head>
 
     <body>
