--- a/views/rrSolution.ejs
+++ b/views/rrSolution.ejs
@@ -21,7 +21,7 @@
       <tbody>
         <% let count = 0; %> <% let total_tat = 0; %> <% let total_wt = 0; %> <%
         for (var i = 0; i < arr.length; i++) { %> <% total_tat = total_tat +
-        arr[i].tat; %> <% total_wt = total_tat + arr[i].wt; %> <% count++ %>
+        arr[i].tat; %> <% total_wt = total_wt + arr[i].wt; %> <% count++ %>
         <tr>
           <td name="pId" id="pId"><%= arr[i].id %></td>
           <td name="pName" id="pName" style="color: #aaaaaa">P<%= i %></td>
