--- a/views/scan-cScan.ejs
+++ b/views/scan-cScan.ejs
@@ -1,9 +1,140 @@
 <%- include('./includes/head.ejs') %>
-    
-    <div class="center">
-        <h1 class="headings">SCAN C-SCAN</h1>
+
+<div class="center">
+  <h1 class="headings">SCAN <span>/</span> C-SCAN</h1>
+</div>
+
+<div class="container" style="text-align: center">
+  <form action="/scan-cScan" method="POST" id="myForm">
+    <table class="table table-striped table-dark">
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td scope="col">
+          <b>Enter Initial Headpoint:</b
+          ><input
+            type="number"
+            name="headpoint"
+            id="headpoint"
+            required="required"
+            class="smallCell"
+          />
+        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>
+          <input
+            type="radio"
+            class="btn-check btn-outline"
+            name="mode"
+            id="scan"
+            value="scan"
+            autocomplete="off"
+            checked
+          />
+          <label class="btn btn-outline" for="scan">SCAN</label>
+
+          <input
+            type="radio"
+            class="btn-check btn-outline"
+            id="cScan"
+            name="mode"
+            value="cScan"
+            autocomplete="off"
+          />
+
+          <label class="btn btn-outline" for="cScan">C SCAN</label>
+        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </table>
+
+    <table class="table table-striped table-dark" id="myTable">
+      <thead>
+        <tr>
+          <th scope="col" style="width: 20rem">Process ID</th>
+          <th scope="col" style="width: 20rem">Track Number</th>
+          <th scope="col" style="width: 20rem">Delete Row</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            <input
+              type="number"
+              min="1"
+              max="20"
+              name="pId"
+              id="pId"
+              required="required"
+              style="width: 200px"
+            />
+          </td>
+          <td><input type="number" name="tn" id="tn" required="required" /></td>
+          <td>
+            <button onclick="deleteRow(this)" class="delete-button">
+              Delete
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+    <div style="display: inline; margin: 20px 30px">
+      <button type="button" class="b1" type="button" onclick="addRow()">
+        Add Row
+      </button>
     </div>
 
-    <div class="container" ></div>
-    
+    <div style="display: inline; margin: 20px 30px">
+      <button type="submit" class="b1">Calculate</button>
+    </div>
+  </form>
+
+  <script>
+    // the logic for when if there is only one row you cannot submit the form.
+    var form = document.getElementById("myForm");
+    form.addEventListener("submit", function (event) {
+      var table = document.getElementById("myTable");
+      if (table.rows.length <= 2) {
+        alert("You must enter at least two processes to calculate.");
+        event.preventDefault(); // prevent form submission
+      }
+    });
+
+    // the logic for adding a row and the logic for delete row button
+    function addRow() {
+      var table = document.getElementById("myTable");
+      var newRow = table.insertRow(-1); // Add row at the end
+      var pIdCell = newRow.insertCell(0);
+      var tnCell = newRow.insertCell(1);
+      var buttonCell = newRow.insertCell(2);
+      pIdCell.innerHTML =
+        '<input type="text" name="pId" value="" required="required">';
+      tnCell.innerHTML =
+        '<input type="text" name="tn" value="" required="required">';
+      var deleteButton = document.createElement("button");
+      deleteButton.classList.add("delete-button");
+      deleteButton.innerHTML = "Delete";
+      deleteButton.onclick = function () {
+        deleteRow(this);
+      };
+      buttonCell.appendChild(deleteButton);
+    }
+
+    function deleteRow(btn) {
+      var row = btn.parentNode.parentNode;
+      row.parentNode.removeChild(row);
+    }
+  </script>
+</div>
 <%- include('./includes/end.ejs') %>
