--- a/views/scan-cScan.ejs
+++ b/views/scan-cScan.ejs
@@ -52,7 +52,29 @@
 
           <label class="btn btn-outline" for="cScan">C SCAN</label>
         </td>
-        <td></td>
+        <td>
+          <input
+            type="radio"
+            class="btn-check btn-outline"
+            name="direction"
+            id="left"
+            value="left"
+            autocomplete="off"
+            checked
+          />
+          <label class="btn btn-outline" for="left">LEFT</label>
+
+          <input
+            type="radio"
+            class="btn-check btn-outline"
+            id="right"
+            name="direction"
+            value="right"
+            autocomplete="off"
+          />
+
+          <label class="btn btn-outline" for="right">RIGHT</label>
+        </td>
         <td></td>
         <td></td>
       </tr>
