--- a/views/scan-cScan.ejs
+++ b/views/scan-cScan.ejs
@@ -12,8 +12,8 @@
         <td></td>
         <td></td>
         <td scope="col">
-          <b>Enter Initial Headpoint:</b
-          ><input
+          <b>Enter Initial Headpoint:</b>
+          <input
             type="number"
             name="headpoint"
             id="headpoint"
@@ -29,7 +29,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>
+        <td style="width: 80%">
           <input
             type="radio"
             class="btn-check btn-outline"
@@ -50,9 +50,7 @@
             autocomplete="off"
           />
 
-          <label class="btn btn-outline" for="cScan">C SCAN</label>
-        </td>
-        <td>
+          <label class="btn btn-outline mode" for="cScan">C SCAN</label>
           <input
             type="radio"
             class="btn-check btn-outline"
@@ -62,7 +60,7 @@
             autocomplete="off"
             checked
           />
-          <label class="btn btn-outline" for="left">LEFT</label>
+          <label class="btn btn-outline direction" for="left">LEFT</label>
 
           <input
             type="radio"
@@ -75,6 +73,7 @@
 
           <label class="btn btn-outline" for="right">RIGHT</label>
         </td>
+        <td></td>
         <td></td>
         <td></td>
       </tr>
